--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ga.twpooi.detectseoul.MainActivity">
+    android:background="@color/background_color"
+    tools:context="ga.twpooi.detectseoul.MainActivity"
+    >
 
     <Button
         android:id="@+id/btnGallery"
