--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,36 +8,91 @@
     tools:context="ga.twpooi.detectseoul.StartActivity"
     >
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/background_img"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/half_transparent"
         >
 
-        <TextView
-            android:id="@+id/tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
-            android:textSize="24sp"
-            android:textColor="@color/dark_gray"
-            android:textStyle="bold"
-            android:padding="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_sub_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:text="Title"
-            android:textSize="14sp"
-            android:textColor="@color/gray"
-            android:paddingLeft="10dp"
-            />
+            >
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:padding="10dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_sub_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Title"
+                android:textSize="14sp"
+                android:textColor="@color/light_gray2"
+                android:paddingLeft="10dp"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            >
+
+            <Button
+                android:id="@+id/search_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/left_round_corner_btn"
+                android:text="Search"
+                android:textColor="@color/dark_gray"
+                android:textSize="14sp"
+                android:textAllCaps="false"
+                />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="40dp"
+                android:background="@color/light_gray"
+                />
+
+            <Button
+                android:id="@+id/detect_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/right_round_corner_btn"
+                android:layout_marginBottom="20dp"
+                android:text="Detect"
+                android:textColor="@color/dark_gray"
+                android:textSize="14sp"
+                android:textAllCaps="false"
+                />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
