--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,15 @@
     <dimen name="layout_content_size">8sp</dimen>
     <dimen name="layout_reference_size">6sp</dimen>
 
+
+    <!-- Observable ScrollView -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="flexible_space_height">72dp</dimen>
+    <dimen name="flexible_space_image_height">240dp</dimen>
+    <dimen name="flexible_space_show_fab_offset">120dp</dimen>
+
+    <dimen name="margin_standard">16dp</dimen>
+
 </resources>
