--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -81,6 +81,37 @@
                     android:textColor="@color/white"
                     />
 
+                <RelativeLayout
+                    android:id="@+id/rl_picture"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    >
+
+                    <ga.twpooi.detectseoul.util.CustomViewPager
+                        android:id="@+id/view_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:layout_gravity="center_horizontal"
+                        >
+
+                    </ga.twpooi.detectseoul.util.CustomViewPager>
+
+                    <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
+                        android:id="@+id/main_indicator_ad"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@+id/view_pager"
+                        />
+
+                </RelativeLayout>
+
+
             </LinearLayout>
         </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
 
