--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -81,6 +81,19 @@
                     android:textColor="@color/white"
                     />
 
+                <LinearLayout
+                    android:id="@+id/li_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    >
+
+                </LinearLayout>
+
                 <RelativeLayout
                     android:id="@+id/rl_picture"
                     android:layout_width="match_parent"
