--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,18 +9,34 @@
     tools:context="ga.twpooi.detectseoul.StartActivity"
     >
 
-    <ImageView
-        android:id="@+id/background_img"
+    <!--<ImageView-->
+        <!--android:id="@+id/background_img"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--/>-->
+
+    <com.flaviofaria.kenburnsview.KenBurnsView
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        />
+        android:src="@color/colorPrimary" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/half_transparent"
+        android:background="@color/quar_transparent"
         >
+
+        <TextView
+            android:id="@+id/tv_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="R"
+            android:textColor="@color/white"
+            android:padding="10dp"
+            android:layout_alignParentRight="true"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,6 +65,19 @@
                 android:textSize="14sp"
                 android:textColor="@color/light_gray2"
                 android:paddingLeft="10dp"
+                android:paddingBottom="10dp"
+                />
+
+            <TextView
+                android:id="@+id/show_detail_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="상세보기"
+                android:textSize="14sp"
+                android:textColor="@color/light_gray"
+                android:paddingLeft="10dp"
+                android:paddingBottom="10dp"
                 />
 
         </LinearLayout>
