--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Title"
+                android:text=""
                 android:textSize="24sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="Title"
+                android:text=""
                 android:textSize="14sp"
                 android:textColor="@color/light_gray2"
                 android:paddingLeft="10dp"
@@ -76,6 +76,7 @@
                 android:text="상세보기"
                 android:textSize="14sp"
                 android:textColor="@color/light_gray"
+                android:visibility="gone"
                 android:paddingLeft="10dp"
                 android:paddingBottom="10dp"
                 />
