--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -95,6 +95,18 @@
                 </LinearLayout>
 
                 <RelativeLayout
+                    android:id="@+id/map_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    >
+
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:id="@+id/rl_picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
