--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -96,14 +96,32 @@
                 </LinearLayout>
 
                 <RelativeLayout
-                    android:id="@+id/map_view"
+                    android:id="@+id/rl_map_view"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
                     >
+
+                    <RelativeLayout
+                        android:id="@+id/map_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        >
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/tv_show_kakao_map"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="카카오맵으로 보기"
+                        android:textColor="@color/light_gray2"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@+id/map_view"
+                        />
 
                 </RelativeLayout>
 
