--- a/app/src/main/res/layout/fragment_simple_photo.xml
+++ b/app/src/main/res/layout/fragment_simple_photo.xml
@@ -7,7 +7,7 @@
     >
 
 
-    <ImageView
+    <ga.twpooi.detectseoul.util.AdvancedImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
