기능 추가   * 앱 아이콘 추가   * 딥러닝 파일 변경   * 영어 리소스 추가   * 앱 기본 언어를 영어로 설정   * 영어로된 정보를 가져올 수 있도록 기능 추가   * 기타 필요한 리소스 추가

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -73,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="상세보기"
+                android:text="@string/show_detail"
                 android:textSize="14sp"
                 android:textColor="@color/light_gray"
                 android:visibility="gone"
