--- a/app/src/main/res/layout/layout_select_method.xml
+++ b/app/src/main/res/layout/layout_select_method.xml
@@ -41,9 +41,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="사진첩"
+                        android:text="@string/gallery"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:gravity="center"
                         />
 
@@ -79,7 +79,7 @@
                         android:layout_marginTop="10dp"
                         android:text="URL"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:gravity="center"
                         />
 
@@ -113,9 +113,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="카메라"
+                        android:text="@string/camera"
                         android:textColor="@color/dark_gray"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:gravity="center"
                         />
 
