--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,6 +16,7 @@
 <com.github.ppamorim.dragger.DraggerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dragger_layout="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:williamchart="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dragger_view"
@@ -117,7 +118,7 @@
                         android:id="@+id/tv_show_kakao_map"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="카카오맵으로 보기"
+                        android:text="@string/view_as_kakao_map"
                         android:textColor="@color/light_gray2"
                         android:layout_marginTop="10dp"
                         android:layout_below="@+id/map_view"
@@ -204,14 +205,26 @@
                 android:background="@android:color/transparent" />
         </LinearLayout>
 
-        <com.melnykov.fab.FloatingActionButton
+        <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|top"
             android:scaleType="center"
-            app:fab_type="mini"
-            app:fab_colorNormal="@color/white"
-            app:fab_colorPressed="@color/white" />
+            fab:fab_size="mini"
+            fab:fab_icon="@drawable/ic_web_grey600_18dp"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_title="Action A"
+            fab:fab_colorPressed="@color/light_gray" />
+
+        <!--<com.melnykov.fab.FloatingActionButton-->
+            <!--android:id="@+id/fab"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="left|top"-->
+            <!--android:scaleType="center"-->
+            <!--app:fab_type="mini"-->
+            <!--app:fab_colorNormal="@color/white"-->
+            <!--app:fab_colorPressed="@color/white" />-->
     </FrameLayout>
 </com.github.ppamorim.dragger.DraggerView>
