--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="image"
+                android:text="Image"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:layout_centerInParent="true"
@@ -52,7 +52,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:text="닫기"
+                android:text="@string/close_srt"
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 />
